fixed spacing on compose button

--- a/app/styles/components/header/_headercompose.scss
+++ b/app/styles/components/header/_headercompose.scss
@@ -89,12 +89,12 @@ $header-compose-width: 500px;
     }
 
     .header-compose-contentarea {
-        padding: 10px;
+        padding: 30px 10px 10px;
         border: 1px solid #444;
         background: #444;
     }
 
     .header-compose-button {
-        padding: 10px;
+        padding: 30px 0 0;
     }
 }
